[package]
name = "intarray"
version = "0.1.0"
authors = ["Takashi WATANABE <wtnb75@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.98"
env_logger = "0.6.2"
log = "0.4.8"
rand = "0.7.0"

[dev-dependencies]
test-env-log = "0.1.0"
serde_json = "1.0.40"
serde_derive = "1.0.98"
serde_yaml = "0.8.9"
clap = "2.33.0"
sha2 = "0.8.0"
digest = "0.8.1"
hex = "0.3.2"

[[example]]
name = "bench"
